--- a/Pizzeria- Cardoso Agustin/pages/pizzas.html
+++ b/Pizzeria- Cardoso Agustin/pages/pizzas.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LA PIZZERIA - home</title>
 </head>
@@ -58,75 +59,82 @@
       <div class="image-ganadora">
         <img class="img-ganadora" src="../assets/img/pizza ganadora 1.jpeg" alt="pizza ganadora">
       </div>
-      <table>
-        <tr>
-          <th>Pizzas</th>
-          <th>Ingredientes</th>
-          <th>Precio</th>
-        </tr>
-        <tr>
-          <td>Muzzarella</td>
-          <td>Salsa, Muzarella, Aceitunas</td>
-          <td>$1000</td>
-        </tr>
-        <tr>
-          <td>Napolitana</td>
-          <td>Salsa, tomates, ajo, muzzarella</td>
-          <td>$1200</td>
-        </tr>
-        <tr>
-          <td>Jamon y morron</td>
-          <td>Salsa, jamon, morrones, aceitunas</td>
-          <td>$1200</td>
-        </tr>
-        <tr>
-          <td>Fugazzeta</td>
-          <td>Cebolla, Muzzarella, Aceitunas</td>
-          <td>$1300</td>
-        </tr>
-        <tr>
-          <td>Napolitana con jamon</td>
-          <td>Salsa, Jamon, Ajo, Muzzarella</td>
-          <td>$1400</td>
-        </tr>
-        <tr>
-          <td>Cancha</td>
-          <td>Salsa picante</td>
-          <td>$1000</td>
-        </tr>
-        <tr>
-          <td>Provolone</td>
-          <td>Salsa, Provolone, Muzzarella, Aceitunas</td>
-          <td>$1400</td>
-        </tr>
-        <tr>
-          <td>Cantimpalo</td>
-          <td>Salsa, Muzzarella, Cantimpalo</td>
-          <td>$1300</td>
-        </tr>
-        <tr>
-          <td>Palmitos y Salsa Golf</td>
-          <td>Salsa, Jamon, Palmitos y Salsa Golf</td>
-          <td>$1500</td>
-        </tr>
-        <tr>
-          <td>Hawaiana</td>
-          <td>Salsa, Jamon, Anana y Salsa Golf</td>
-          <td>$1600</td>
-        </tr>
+
+
+      <table class="table">
+        <thead>
+          <tr class="table-primary">
+            <th scope="col">#</th>
+            <th scope="col">Pizza</th>
+            <th scope="col">Ingredientes</th>
+            <th scope="col">Precio</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-secondary">
+            <th scope="row">1</th>
+            <td>Muzzarella</td>
+            <td>Salsa, Muzarella, Aceitunas</td>
+            <td>$1000</td>
+          </tr>
+          <tr class="table-success">
+            <th scope="row">2</th>
+            <td>Napolitana</td>
+            <td>Salsa, tomates, ajo, muzzarella</td>
+            <td>$1200</td>
+          </tr>
+          <tr class="table-danger">
+            <th scope="row">3</th>
+            <td>Jamon y morron</td>
+            <td>Salsa, jamon, morrones, aceitunas</td>
+            <td>$1200</td>
+
+          </tr>
+          <tr class="table-warning">
+            <th scope="row">4</th>
+            <td>Fugazzeta</td>
+            <td>Cebolla, Muzzarella, Aceitunas</td>
+            <td>$1300</td>
+          </tr>
+          <tr class="table-info">
+            <th scope="row">5</th>
+            <td>Napolitana con jamon</td>
+            <td>Salsa, Jamon, Ajo, Muzzarella</td>
+            <td>$1400</td>
+          </tr>
+          <tr class="table-ligth">
+            <th scope="row">6</th>
+            <td>Cancha</td>
+            <td>Salsa picante</td>
+            <td>$1000</td>
+          </tr>
+          <tr class="table-dark">
+            <th scope="row">7</th>
+            <td>Provolone</td>
+            <td>Salsa, Provolone, Muzzarella, Aceitunas</td>
+            <td>$1400</td>
+          </tr>
+          <tr class="table-primary">
+            <th scope="row">8</th>
+            <td>Cantimpalo</td>
+            <td>Salsa, Muzzarella, Cantimpalo</td>
+            <td>$1300</td>
+          </tr>
+          <tr class="table-danger">
+            <th scope="row">9</th>
+            <td>Palmitos y Salsa Golf</td>
+            <td>Salsa, Jamon, Palmitos y Salsa Golf</td>
+            <td>$1500</td>
+          </tr>
+          <tr class="table-success">
+            <th scope="row">10</th>
+            <td>Hawaiana</td>
+            <td>Salsa, Jamon, Anana y Salsa Golf</td>
+            <td>$1600</td>
+          </tr>
+        </tbody>
       </table>
-      <!-- <ol>
-                 <li>Muzzarella</li>
-                 <li>Napolitana</li>
-                 <li>Especial jamon y morrones</li>
-                 <li>Fugazzeta</li>
-                 <li>Napo con jamon</li>
-                 <li>Cancha</li>
-                 <li>Cantimpalo</li>
-                 <li>Provolone</li>
-                 <li>Palmitos y salsa golf</li>
-                 <li>Hawaiana</li>
-             </ol> -->
+
     </section>
   </main>
 
@@ -161,7 +169,7 @@
   </footer>
 
   <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
-
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
 
 
 
