--- a/Pizzeria- Cardoso Agustin/index.html
+++ b/Pizzeria- Cardoso Agustin/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>LA PIZZERIA - home</title>
 </head>
 
@@ -56,9 +58,22 @@
         <h1>LA PIZZERIA</h1>
     </div>
 
-    <div class="banner-container">
+    <!-- <div class="banner-container">
         <img src="./assets/img/nombre pizzeria.jpeg" alt="portada" width="100%" height="600px">
-    </div>
+    </div> -->
+    <div id="carouselPizza" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/img/nombre pizzeria.jpeg" class="d-block w-100" height="500px" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/pizza 1.jpeg" class="d-block w-100" height="500px" alt="...">
+          </div>    
+          <div class="carousel-item">
+            <img src="./assets/img/empanadas/empanada1.webp " class="d-block w-100" height="500px" alt="...">
+          </div>
+        </div>
+      </div>
 
     <div class="home-images-container">
 
@@ -181,6 +196,7 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
