Entrega 2 proyecto final

--- a/Pizzeria- Cardoso Agustin/pages/contacto.html
+++ b/Pizzeria- Cardoso Agustin/pages/contacto.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="icon" type="image/jpg" href="./assets/img/favicon.png" />
-        <link rel="stylesheet" href="../assets/styles/index.css" />
-        <link rel="stylesheet" href="../assets/styles/contacto.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
-        <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-        <title>LA PIZZERIA - home</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/jpg" href="./assets/img/favicon.png" />
+    <link rel="stylesheet" href="../assets/styles/index.css" />
+    <link rel="stylesheet" href="../assets/styles/contacto.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>LA PIZZERIA - home</title>
+</head>
 
 
 <body>
@@ -80,17 +80,18 @@
                 </div>
             </div> -->
             <div class="container-fluid">
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Direccion de Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Escriba aqui su mensaje</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-              </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Direccion de Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Escriba aqui su mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
             </div>
         </section>
     </main>
