--- a/Pizzeria- Cardoso Agustin/index.html
+++ b/Pizzeria- Cardoso Agustin/index.html
@@ -40,11 +40,11 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="menu-items">
-                        <li><a  href="./pages/pizzas.html">Pizzas</a></li>
-                        <li><a  href="./pages/empanadas.html">Empanadas</a></li>
-                        <li><a  href="./pages/minutas.html">Minutas</a></li>
-                        <li><a  href="./pages/contacto.html">Contacto</a></li>
-                        <li><a  href="./index.html">Home</a></li>
+                        <li><a href="./pages/pizzas.html">Pizzas</a></li>
+                        <li><a href="./pages/empanadas.html">Empanadas</a></li>
+                        <li><a href="./pages/minutas.html">Minutas</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                        <li><a href="./index.html">Home</a></li>
                     </div>
                 </div>
             </div>
@@ -63,17 +63,17 @@
     </div> -->
     <div id="carouselPizza" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./assets/img/nombre pizzeria.jpeg" class="d-block w-100" height="500px" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/pizza 1.jpeg" class="d-block w-100" height="500px" alt="...">
-          </div>    
-          <div class="carousel-item">
-            <img src="./assets/img/empanadas/empanada1.webp " class="d-block w-100" height="500px" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img src="./assets/img/nombre pizzeria.jpeg" class="d-block w-100" height="500px" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/pizza 1.jpeg" class="d-block w-100" height="500px" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/empanadas/empanada1.webp " class="d-block w-100" height="500px" alt="...">
+            </div>
         </div>
-      </div>
+    </div>
 
     <div class="home-images-container">
 
@@ -88,7 +88,7 @@
 
     <section>
 
-        
+
         <div class="video">
             <iframe width="600" height="400" src="https://www.youtube.com/embed/ywrLSeDVH5U"
                 title="YouTube video player" frameborder="0"
@@ -110,59 +110,58 @@
 
     </section>
     <section>
-            <div class="video">
-                <div class="txtitaliano">
-                    <p class="txt1">Se cree que la escasez de ingredientes como el queso y el tomate que lleva la
-                        versión original de la pizza se debe a la pobreza que se vivía en Italia, por eso, cuando
-                        los
-                        inmigrantes europeos llegaron a la Argentina enloquecieron con la abundancia de alimentos
-                        que
-                        encontraron en nuestro país y modificaron la receta para convertirla en un plato principal.
-                        “Como práctica habitual, la abundancia de algunos productos modifica los usos y costumbres
-                        de
-                        cómo hacer la pizza. De esta forma, la versión argentina se modifica, haciendo que el disco
-                        de
-                        masa sea mucho más grueso, las salsas y la mozzarella (que en estas latitudes se hace de
-                        leche
-                        vacuna y no de búfala) tienen que llegar hasta el borde e inclusive superarlo”, se
-                        entusiasma
-                        Miro.</p>
-                    <p class="txt2">Como prueba de la popularización de la pizza en los hogares presentada a la mesa
-                        como plato principal, en la edición de 1914 de El libro de cocina de Francisco Figueredo,
-                        tal
-                        como recuerda Perticone, aparece la receta de la Pizza Familiar. El advenimiento y la
-                        instalación definitiva de la pizza en nuestro país se relacionan con la llegada de la
-                        inmigración. Cuenta la historia que en 1893 el genovés Agustín Banchero abrió una panadería
-                        donde vendía pizza hasta que casi cuarenta años después, en 1932, inauguró una de las
-                        primeras
-                        pizzerías de la ciudad en la Boca. El consumo de pizza y fainá se consolidará en esta época
-                        debido a que los genoveses ya vendían la masa de harina de garbanzos en tachos tipo fuente
-                        en
-                        los alrededores de la cancha. De aquí también surgirá la costumbre de comer de a porciones y
-                        de
-                        parado.</p>
-                    <p class="txt3">Los años treinta traen el esplendor de la calle Corrientes, repleta de teatros y
-                        restaurantes, donde, según cuenta Perticone, se conjugan todas las variables para que la
-                        pizza
-                        entre en su época de oro con la apertura de locales notables que todavía hoy continúan
-                        haciendo
-                        historia como Güerrín, Las Cuartetas, El Cuartito y Angelín, entre otras.</p>
-                </div>
-                <div class="video2-item">
-                    <iframe width="600" height="400" src="https://www.youtube.com/embed/598dqPB7NgM"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
+        <div class="video">
+            <div class="txtitaliano">
+                <p class="txt1">Se cree que la escasez de ingredientes como el queso y el tomate que lleva la
+                    versión original de la pizza se debe a la pobreza que se vivía en Italia, por eso, cuando
+                    los
+                    inmigrantes europeos llegaron a la Argentina enloquecieron con la abundancia de alimentos
+                    que
+                    encontraron en nuestro país y modificaron la receta para convertirla en un plato principal.
+                    “Como práctica habitual, la abundancia de algunos productos modifica los usos y costumbres
+                    de
+                    cómo hacer la pizza. De esta forma, la versión argentina se modifica, haciendo que el disco
+                    de
+                    masa sea mucho más grueso, las salsas y la mozzarella (que en estas latitudes se hace de
+                    leche
+                    vacuna y no de búfala) tienen que llegar hasta el borde e inclusive superarlo”, se
+                    entusiasma
+                    Miro.</p>
+                <p class="txt2">Como prueba de la popularización de la pizza en los hogares presentada a la mesa
+                    como plato principal, en la edición de 1914 de El libro de cocina de Francisco Figueredo,
+                    tal
+                    como recuerda Perticone, aparece la receta de la Pizza Familiar. El advenimiento y la
+                    instalación definitiva de la pizza en nuestro país se relacionan con la llegada de la
+                    inmigración. Cuenta la historia que en 1893 el genovés Agustín Banchero abrió una panadería
+                    donde vendía pizza hasta que casi cuarenta años después, en 1932, inauguró una de las
+                    primeras
+                    pizzerías de la ciudad en la Boca. El consumo de pizza y fainá se consolidará en esta época
+                    debido a que los genoveses ya vendían la masa de harina de garbanzos en tachos tipo fuente
+                    en
+                    los alrededores de la cancha. De aquí también surgirá la costumbre de comer de a porciones y
+                    de
+                    parado.</p>
+                <p class="txt3">Los años treinta traen el esplendor de la calle Corrientes, repleta de teatros y
+                    restaurantes, donde, según cuenta Perticone, se conjugan todas las variables para que la
+                    pizza
+                    entre en su época de oro con la apertura de locales notables que todavía hoy continúan
+                    haciendo
+                    historia como Güerrín, Las Cuartetas, El Cuartito y Angelín, entre otras.</p>
+            </div>
+            <div class="video2-item">
+                <iframe width="600" height="400" src="https://www.youtube.com/embed/598dqPB7NgM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <div class="maps">
+                    <iframe width="600px" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                        src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=la%20matanza%20+(pizzeria)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                            href="https://www.gps.ie/car-satnav-gps/">GPS car tracker</a>
                     </iframe>
-                    <div class="maps">
-                        <iframe width="600px" height="400px" frameborder="0" scrolling="no"
-                            marginheight="0" marginwidth="0"
-                            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=la%20matanza%20+(pizzeria)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-                                href="https://www.gps.ie/car-satnav-gps/">GPS car tracker</a>
-                        </iframe>
-                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <footer>
