--- a/Pizzeria- Cardoso Agustin/pages/minutas.html
+++ b/Pizzeria- Cardoso Agustin/pages/minutas.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/jpg" href="../assets/img/favicon.png" />
     <link rel="stylesheet" href="../assets/styles/minutas.css" />
     <link rel="stylesheet" href="../assets/styles/index.css" />
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
@@ -177,6 +178,7 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
 
 
 
