segunda entrega proyecto final

--- a/Pizzeria- Cardoso Agustin/index.html
+++ b/Pizzeria- Cardoso Agustin/index.html
@@ -12,7 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="keywords" content="Pizza, pizzas, comida, delivery, historia, muzzarella">
+    <meta name="description"
+        content="Tradicional Pizzeria de Buenos Aires que ofrece las mejores pizzas a la piedra, empanadas caseras, e increibles minutas!">
+    <meta name="author" content="Agustin Cardoso">
+    
     <title>LA PIZZERIA - home</title>
 </head>
 
@@ -21,10 +25,10 @@
     <header>
         <nav class="navBarDesktop">
             <ul>
-                <li><a class="link" href="./pages/pizzas.html">Pizzas</a></li>
-                <li><a class="link" href="./pages/empanadas.html">Empanadas</a></li>
-                <li><a class="link" href="./pages/minutas.html">Minutas</a></li>
                 <li><a class="link" href="./pages/contacto.html">Contacto</a></li>
+                <li><a class="link" href="./pages/minutas.html">Minutas</a></li>
+                <li><a class="link" href="./pages/empanadas.html">Empanadas</a></li>
+                <li><a class="link" href="./pages/pizzas.html">Pizzas</a></li>
                 <li><a class="link" href="./index.html">Home</a></li>
                 <li class="logo"><a class="link" href="#">La Pizzeria</a></li>
             </ul>
@@ -58,9 +62,6 @@
         <h1>LA PIZZERIA</h1>
     </div>
 
-    <!-- <div class="banner-container">
-        <img src="./assets/img/nombre pizzeria.jpeg" alt="portada" width="100%" height="600px">
-    </div> -->
     <div id="carouselPizza" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -165,9 +166,6 @@
         </div>
     </section>
     <footer>
-        <div>
-
-        </div>
         <ul>
             <li>
                 <a class="link" href="https://www.facebook.com/lapizzeria/" target="_blank">
