--- a/Pizzeria- Cardoso Agustin/pages/contacto.html
+++ b/Pizzeria- Cardoso Agustin/pages/contacto.html
@@ -12,8 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Pizza, pizzas, comida, delivery, historia, muzzarella, escribinos">
+    <meta name="description"
+        content="Tradicional Pizzeria de Buenos Aires que ofrece las mejores pizzas a la piedra, empanadas caseras, e increibles minutas!">
+    <meta name="author" content="Agustin Cardoso">
 
-    <title>LA PIZZERIA - home</title>
+
+    <title>LA PIZZERIA - Contacto</title>
 </head>
 
 
@@ -21,10 +26,10 @@
     <header>
         <nav class="navBarDesktop">
             <ul>
-                <li><a class="link" href="./pizzas.html">Pizzas</a></li>
-                <li><a class="link" href="./empanadas.html">Empanadas</a></li>
-                <li><a class="link" href="./minutas.html">Minutas</a></li>
                 <li><a class="link" href="./contacto.html">Contacto</a></li>
+                <li><a class="link" href="./minutas.html">Minutas</a></li>
+                <li><a class="link" href="./empanadas.html">Empanadas</a></li>
+                <li><a class="link" href="./pizzas.html">Pizzas</a></li>
                 <li><a class="link" href="../index.html">Home</a></li>
                 <li class="logo"><a class="link" href="../index.html">La Pizzeria</a></li>
             </ul>
@@ -54,31 +59,12 @@
     </header>
 
     <main>
-        <section>
-            <!-- <div class="contact-container">
-                <div>
-
-                    <div>
-                        <form action="" class="contact-form">
-                            <h1>Contacto</h1>
-                            <p>Dudas? Sugerencias? Escribinos! Responderemos a la brevedad</p>
-
-                            <label for="name">Nombre</label>
-                            <input type="text" required>
-
-                            <label for="Email">Tu Email</label>
-                            <input type="mail" required>
-
-                            <label for="mensaje"></label>
-                            <textarea name="mensaje" id="mensaje" cols="40" rows="20"
-                                placeholder="Escriba aqui su mensaje">
-                        </textarea>
-
-                            <input type="submit" value="Enviar Mensaje">
-                        </form>
-                    </div>
-                </div>
-            </div> -->
+        <div>
+            <h1 class="titleContact">
+                Escribinos!
+            </h1>
+        </div>
+        <section class="imagenFondo">
             <div class="container-fluid">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Direccion de Email</label>
