--- a/Pizzeria- Cardoso Agustin/pages/minutas.html
+++ b/Pizzeria- Cardoso Agustin/pages/minutas.html
@@ -12,173 +12,179 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LA PIZZERIA - home</title>
+    <meta name="keywords" content="Pizza, pizzas, comida, delivery, sanguches, tortilla">
+    <meta name="description"
+        content="Tradicional Pizzeria de Buenos Aires que ofrece las mejores pizzas a la piedra, empanadas caseras, e increibles minutas!">
+    <meta name="author" content="Agustin Cardoso">
+
+    <title>LA PIZZERIA - Minutas</title>
 </head>
 
 
-<body>
-    <header>
-        <nav class="navBarDesktop">
-            <ul>
-                <li><a class="link" href="./pizzas.html">Pizzas</a></li>
-                <li><a class="link" href="./empanadas.html">Empanadas</a></li>
-                <li><a class="link" href="./minutas.html">Minutas</a></li>
-                <li><a class="link" href="./contacto.html">Contacto</a></li>
-                <li><a class="link" href="../index.html">Home</a></li>
-                <li class="logo"><a class="link" href="../index.html">La Pizzeria</a></li>
-            </ul>
-        </nav>
-        <nav>
-            <div class="mobile-navbar">
-                <div class="container nav-container">
-                    <input class="checkbox" type="checkbox" name="" id="" />
-                    <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                    </div>
-                    <div class="menu-items">
-                        <li><a href="./pizzas.html">Pizzas</a></li>
-                        <li><a href="./empanadas.html">Empanadas</a></li>
-                        <li><a href="./minutas.html">Minutas</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
-                        <li><a href="../index.html">Home</a></li>
-                    </div>
+
+<header>
+    <nav class="navBarDesktop">
+        <ul>
+            <li><a class="link" href="./contacto.html">Contacto</a></li>
+            <li><a class="link" href="./minutas.html">Minutas</a></li>
+            <li><a class="link" href="./empanadas.html">Empanadas</a></li>
+            <li><a class="link" href="./pizzas.html">Pizzas</a></li>
+            <li><a class="link" href="../index.html">Home</a></li>
+            <li class="logo"><a class="link" href="../index.html">La Pizzeria</a></li>
+        </ul>
+    </nav>
+    <nav>
+        <div class="mobile-navbar">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox" name="" id="" />
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <div class="menu-items">
+                    <li><a href="./pizzas.html">Pizzas</a></li>
+                    <li><a href="./empanadas.html">Empanadas</a></li>
+                    <li><a href="./minutas.html">Minutas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                    <li><a href="../index.html">Home</a></li>
+
                 </div>
             </div>
-        </nav>
-
-
-    </header>
-
-    <div class="card-row">
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Mila Napo</span></div>
-                <div class="card-price"><span>$700</span></div>
-            </div>
         </div>
+    </nav>
 
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/tortilla.webp" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Tortilla de papa</span></div>
-                <div class="card-price"><span>$400</span></div>
-            </div>
+    <body class="bodyMinutas">
+</header>
+
+<div class="card-row">
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
         </div>
-
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Milanesa c/ papas</span></div>
-                <div class="card-price"><span>$800</span></div>
-            </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Mila Napo</span></div>
+            <div class="card-price"><span>$700</span></div>
         </div>
     </div>
 
-    <div class="card-row">
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/tortilla.webp" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Hamburguesa</span></div>
-                <div class="card-price"><span>$400</span></div>
-            </div>
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/tortilla.webp" alt="">
         </div>
-
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Hamburguesa completa</span></div>
-                <div class="card-price"><span>$600</span></div>
-            </div>
-        </div>
-
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/tortilla.webp" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Pancho</span></div>
-                <div class="card-price"><span>$200</span></div>
-            </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Tortilla de papa</span></div>
+            <div class="card-price"><span>$400</span></div>
         </div>
     </div>
 
-    <div class="card-row">
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Pancho Completo</span></div>
-                <div class="card-price"><span>$400</span></div>
-            </div>
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
         </div>
-
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/tortilla.webp" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Milanesa con Pure</span></div>
-                <div class="card-price"><span>$700</span></div>
-            </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Milanesa c/ papas</span></div>
+            <div class="card-price"><span>$800</span></div>
         </div>
+    </div>
+</div>
 
-        <div class="card-container">
-            <div class="image-container">
-                <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
-            </div>
-            <div class="price-container bg-italian">
-                <div class="card-title"><span>Pebete jyq</span></div>
-                <div class="card-price"><span>$300</span></div>
-            </div>
+<div class="card-row">
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/tortilla.webp" alt="">
+        </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Hamburguesa</span></div>
+            <div class="card-price"><span>$400</span></div>
         </div>
     </div>
 
-    <footer class="mfooter">
-        <div>
-
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
         </div>
-        <ul>
-            <li>
-                <a class="link" href="https://www.facebook.com/lapizzeria/" target="_blank">
-                    <i class="fa-brands fa-facebook"> FACEBOOK</i>
-                </a>
-            </li>
-            <li>
-                <a class="link" href="https://www.instagram.com/lapizzeria" target="_blank">
-                    <i class="fa-brands fa-instagram"> @INSTAGRAM</i>
-                </a>
-            </li>
-            <li>
-                <a class="link" href="https://www.youtube.com/lapizzeria" target="_blank">
-                    <i class="fa-brands fa-youtube"> YOUTUBE</i>
-                </a>
-            </li>
-            <li class="logo">
-                <a class="static-foot">Copiright, página sin fines de lucro</a>
-            </li>
-            <li class="logo">
-                <a class="static-foot">Seguinos en nuestras redes!</a>
-            </li>
-        </ul>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Hamburguesa completa</span></div>
+            <div class="card-price"><span>$600</span></div>
+        </div>
+    </div>
 
-    </footer>
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/tortilla.webp" alt="">
+        </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Pancho</span></div>
+            <div class="card-price"><span>$200</span></div>
+        </div>
+    </div>
+</div>
 
-    <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+<div class="card-row">
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
+        </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Pancho Completo</span></div>
+            <div class="card-price"><span>$400</span></div>
+        </div>
+    </div>
+
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/tortilla.webp" alt="">
+        </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Milanesa con Pure</span></div>
+            <div class="card-price"><span>$700</span></div>
+        </div>
+    </div>
+
+    <div class="card-container">
+        <div class="image-container">
+            <img src="../assets/img/minutas/Milanesa-napolitana.jpeg" alt="">
+        </div>
+        <div class="price-container bg-arg">
+            <div class="card-title"><span>Pebete jyq</span></div>
+            <div class="card-price"><span>$300</span></div>
+        </div>
+    </div>
+</div>
+
+<footer class="mfooter">
+    <div>
+
+    </div>
+    <ul>
+        <li>
+            <a class="link" href="https://www.facebook.com/lapizzeria/" target="_blank">
+                <i class="fa-brands fa-facebook"> FACEBOOK</i>
+            </a>
+        </li>
+        <li>
+            <a class="link" href="https://www.instagram.com/lapizzeria" target="_blank">
+                <i class="fa-brands fa-instagram"> @INSTAGRAM</i>
+            </a>
+        </li>
+        <li>
+            <a class="link" href="https://www.youtube.com/lapizzeria" target="_blank">
+                <i class="fa-brands fa-youtube"> YOUTUBE</i>
+            </a>
+        </li>
+        <li class="logo">
+            <a class="static-foot">Copiright, página sin fines de lucro</a>
+        </li>
+        <li class="logo">
+            <a class="static-foot">Seguinos en nuestras redes!</a>
+        </li>
+    </ul>
+
+</footer>
+
+<script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
+<script src="./assets/js/bootstrap.bundle.min.js"></script>
 
 
 
