--- a/Pizzeria- Cardoso Agustin/pages/pizzas.html
+++ b/Pizzeria- Cardoso Agustin/pages/pizzas.html
@@ -5,14 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" type="image/jpg" href="../assets/img/favicon.png" />
-  <link rel="stylesheet" href="../assets/styles/pizzas.css" />
   <link rel="stylesheet" href="../assets/styles/index.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LA PIZZERIA - home</title>
+  <meta name="keywords" content="Pizza, pizzas, comida, delivery, historia, muzzarella, napolitana">
+  <meta name="description"
+    content="Tradicional Pizzeria de Buenos Aires que ofrece las mejores pizzas a la piedra, empanadas caseras, e increibles minutas!">
+  <meta name="author" content="Agustin Cardoso">
+
+  <title>LA PIZZERIA - Pizzas</title>
 </head>
 
 
@@ -20,10 +24,10 @@
   <header>
     <nav class="navBarDesktop">
       <ul>
-        <li><a class="link" href="./pizzas.html">Pizzas</a></li>
-        <li><a class="link" href="./empanadas.html">Empanadas</a></li>
-        <li><a class="link" href="./minutas.html">Minutas</a></li>
         <li><a class="link" href="./contacto.html">Contacto</a></li>
+        <li><a class="link" href="./minutas.html">Minutas</a></li>
+        <li><a class="link" href="./empanadas.html">Empanadas</a></li>
+        <li><a class="link" href="./pizzas.html">Pizzas</a></li>
         <li><a class="link" href="../index.html">Home</a></li>
         <li class="logo"><a class="link" href="../index.html">La Pizzeria</a></li>
       </ul>
