--- a/Pizzeria- Cardoso Agustin/pages/empanadas.html
+++ b/Pizzeria- Cardoso Agustin/pages/empanadas.html
@@ -11,10 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>LA PIZZERIA - home</title>
+
+    <meta name="keywords" content="Pizza, pizzas, comida, delivery, empanadas, carne, pollo">
+    <meta name="description"
+        content="Tradicional Pizzeria de Buenos Aires que ofrece las mejores pizzas a la piedra, empanadas caseras, e increibles minutas!">
+    <meta name="author" content="Agustin Cardoso">
+
+    <title>LA PIZZERIA - Empanadas</title>
 </head>
 
 
@@ -22,10 +27,10 @@
     <header>
         <nav class="navBarDesktop">
             <ul>
-                <li><a class="link" href="./pizzas.html">Pizzas</a></li>
-                <li><a class="link" href="./empanadas.html">Empanadas</a></li>
-                <li><a class="link" href="./minutas.html">Minutas</a></li>
                 <li><a class="link" href="./contacto.html">Contacto</a></li>
+                <li><a class="link" href="./minutas.html">Minutas</a></li>
+                <li><a class="link" href="./empanadas.html">Empanadas</a></li>
+                <li><a class="link" href="./pizzas.html">Pizzas</a></li>
                 <li><a class="link" href="../index.html">Home</a></li>
                 <li class="logo"><a class="link" href="../index.html">La Pizzeria</a></li>
             </ul>
@@ -58,7 +63,7 @@
 
     <div class="row">
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -70,7 +75,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -82,7 +87,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -97,7 +102,7 @@
 
     <div class="row">
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -109,7 +114,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -121,47 +126,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
-                <div class="image-container">
-                    <img src="../assets/img/empanadas/empanada1.webp" alt="">
-                </div>
-                <div class="price-container bg-italian">
-                    <div class="card-title"><span>Mi Gusto</span></div>
-                    <div class="card-price"><span>$200</span></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div class="row">
-        <div class="col-md-4 col-sm-12">
-            <div class="card-container">
-                <div class="image-container">
-                    <img src="../assets/img/empanadas/empanada1.webp" alt="">
-                </div>
-                <div class="price-container bg-italian">
-                    <div class="card-title"><span>Mi Gusto</span></div>
-                    <div class="card-price"><span>$200</span></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4 col-sm-12">
-            <div class="card-container">
-                <div class="image-container">
-                    <img src="../assets/img/empanadas/empanada1.webp" alt="">
-                </div>
-                <div class="price-container bg-italian">
-                    <div class="card-title"><span>Mi Gusto</span></div>
-                    <div class="card-price"><span>$200</span></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -177,7 +142,7 @@
 
     <div class="row">
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -189,7 +154,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
@@ -201,7 +166,47 @@
         </div>
 
         <div class="col-md-4 col-sm-12">
-            <div class="card-container">
+            <div class="card-container-emp">
+                <div class="image-container">
+                    <img src="../assets/img/empanadas/empanada1.webp" alt="">
+                </div>
+                <div class="price-container bg-italian">
+                    <div class="card-title"><span>Mi Gusto</span></div>
+                    <div class="card-price"><span>$200</span></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-md-4 col-sm-12">
+            <div class="card-container-emp">
+                <div class="image-container">
+                    <img src="../assets/img/empanadas/empanada1.webp" alt="">
+                </div>
+                <div class="price-container bg-italian">
+                    <div class="card-title"><span>Mi Gusto</span></div>
+                    <div class="card-price"><span>$200</span></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-sm-12">
+            <div class="card-container-emp">
+                <div class="image-container">
+                    <img src="../assets/img/empanadas/empanada1.webp" alt="">
+                </div>
+                <div class="price-container bg-italian">
+                    <div class="card-title"><span>Mi Gusto</span></div>
+                    <div class="card-price"><span>$200</span></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-sm-12">
+            <div class="card-container-emp">
                 <div class="image-container">
                     <img src="../assets/img/empanadas/empanada1.webp" alt="">
                 </div>
