--- a/Pizzeria- Cardoso Agustin/index.html
+++ b/Pizzeria- Cardoso Agustin/index.html
@@ -16,47 +16,39 @@
     <meta name="description"
         content="Tradicional Pizzeria de Buenos Aires que ofrece las mejores pizzas a la piedra, empanadas caseras, e increibles minutas!">
     <meta name="author" content="Agustin Cardoso">
-    
+
     <title>LA PIZZERIA - home</title>
 </head>
 
 
 <body>
-    <header>
-        <nav class="navBarDesktop">
-            <ul>
-                <li><a class="link" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="link" href="./pages/minutas.html">Minutas</a></li>
-                <li><a class="link" href="./pages/empanadas.html">Empanadas</a></li>
-                <li><a class="link" href="./pages/pizzas.html">Pizzas</a></li>
-                <li><a class="link" href="./index.html">Home</a></li>
-                <li class="logo"><a class="link" href="#">La Pizzeria</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-nav">
+        <a class="navbar-brand" href="#">La Pizzeria</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/minutas.html">Minutas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/empanadas.html">Empanadas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/pizzas.html">Pizzas</a>
+                </li>
             </ul>
-        </nav>
-
-        <nav>
-            <div class="mobile-navbar">
-                <div class="container nav-container">
-                    <input class="checkbox" type="checkbox" name="" id="" />
-                    <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                    </div>
-                    <div class="menu-items">
-                        <li><a href="./pages/pizzas.html">Pizzas</a></li>
-                        <li><a href="./pages/empanadas.html">Empanadas</a></li>
-                        <li><a href="./pages/minutas.html">Minutas</a></li>
-                        <li><a href="./pages/contacto.html">Contacto</a></li>
-                        <li><a href="./index.html">Home</a></li>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-
-
+        </div>
+    </nav>
 
     <div class="title-container">
         <h1>LA PIZZERIA</h1>
@@ -191,6 +183,12 @@
 
     <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
