--- a/Pizzeria- Cardoso Agustin/pages/contacto.html
+++ b/Pizzeria- Cardoso Agustin/pages/contacto.html
@@ -23,8 +23,35 @@
 
 
 <body>
-    <header>
-        <nav class="navBarDesktop">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="../index.html">La Pizzeria</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./minutas.html">Minutas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./empanadas.html">Empanadas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pizzas.html">Pizzas</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- <nav class="navBarDesktop">
             <ul>
                 <li><a class="link" href="./contacto.html">Contacto</a></li>
                 <li><a class="link" href="./minutas.html">Minutas</a></li>
@@ -53,10 +80,8 @@
                     </div>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
-
-    </header>
 
     <main>
         <div>
@@ -118,6 +143,12 @@
 
     <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
 </body>
 
