--- a/Pizzeria- Cardoso Agustin/pages/minutas.html
+++ b/Pizzeria- Cardoso Agustin/pages/minutas.html
@@ -7,10 +7,10 @@
     <link rel="icon" type="image/jpg" href="../assets/img/favicon.png" />
     <link rel="stylesheet" href="../assets/styles/minutas.css" />
     <link rel="stylesheet" href="../assets/styles/index.css" />
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Pizza, pizzas, comida, delivery, sanguches, tortilla">
     <meta name="description"
@@ -22,8 +22,8 @@
 
 
 
-<header>
-    <nav class="navBarDesktop">
+
+    <!-- <nav class="navBarDesktop">
         <ul>
             <li><a class="link" href="./contacto.html">Contacto</a></li>
             <li><a class="link" href="./minutas.html">Minutas</a></li>
@@ -32,8 +32,8 @@
             <li><a class="link" href="../index.html">Home</a></li>
             <li class="logo"><a class="link" href="../index.html">La Pizzeria</a></li>
         </ul>
-    </nav>
-    <nav>
+    </nav> -->
+    <!-- <nav>
         <div class="mobile-navbar">
             <div class="container nav-container">
                 <input class="checkbox" type="checkbox" name="" id="" />
@@ -52,10 +52,36 @@
                 </div>
             </div>
         </div>
-    </nav>
+    </nav> -->
+<body>
 
-    <body class="bodyMinutas">
-</header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+        <a class="navbar-brand" href="../index.html">La Pizzeria</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./minutas.html">Minutas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./empanadas.html">Empanadas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pizzas.html">Pizzas</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 <div class="card-row">
     <div class="card-container">
@@ -185,6 +211,12 @@
 
 <script src="https://kit.fontawesome.com/71a35433e7.js" crossorigin="anonymous"></script>
 <script src="./assets/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+crossorigin="anonymous"></script>
 
 
 
